Fixed: menu alignment under django 3

--- a/admin_menu/sass/admin-menu.scss
+++ b/admin_menu/sass/admin-menu.scss
@@ -6,17 +6,18 @@ body {
 
 #header {
   background-color: $primary-color;
-  height: 80px;
+  flex-wrap: wrap;
+  padding: 10px 40px 0 40px;
   overflow: visible;
 
   h1 {
     position: absolute;
     top: 9px;
     left: 78px;
-  }
 
-  h1 a {
-    color: $primary-text;
+    a {
+      color: $primary-text;
+    }
   }
 
   #site-name {
@@ -39,8 +40,8 @@ body {
   }
 
   .tabs {
-    padding: 16px 0;
-    clear: left;
+    flex-basis: 100%;
+    padding: 16px 0 0 0;
     background-color: $primary-color;
 
     ul {
@@ -126,11 +127,11 @@ body {
         display: none;
         position: absolute;
         top: 100%;
-        left: 0;
+        left: -1px;
         background: #fff;
         padding: 0;
-        z-index: 9;
-        box-shadow: 0px 3px 1px 2px rgba(206, 206, 214, 0.4);
+        z-index: 99;
+        box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
 
         li {
           float: none;
